--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,8 +99,15 @@ input, select, button{
 
 .bookmark--delete{
     position: absolute;
-    right:0;
-    top:0;
+    right:0.75rem;
+    top:0.5rem;
+    height:1.75rem;
+    width:1.75rem;
+    background-image: url(../images/bin.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    filter: invert(100%);
 }
 
 .bookmark--item .bookmark--info .bookmark--url {
@@ -136,7 +143,7 @@ input, select, button{
 }
 
 .drawn--box:hover, .button--rectangle:hover {
-    transform: scale(1.12,1.12);
+    transform: scale(1.02,1.02);
 }
 
 [class^="rating--star"]{
